updated method from GET to POST for access token script

--- a/python/authentication/registerClient_generateToken_Python.ipynb
+++ b/python/authentication/registerClient_generateToken_Python.ipynb
@@ -124,7 +124,7 @@
     "}\n",
     "\n",
     "# process the results\n",
-    "response = requests.request(\"GET\", url, headers=headers, verify=False)\n",
+    "response = requests.request(\"POST\", url, headers=headers, verify=False)\n",
     "access_token = json.loads(response.text)['access_token']\n",
     "print(json.dumps(response.json(), indent=4, sort_keys=True))\n",
     "\n",
