updated /registerClient_generateToken_Python.ipynb notebook for better handling of the url build

--- a/python/authentication/registerClient_generateToken_Python.ipynb
+++ b/python/authentication/registerClient_generateToken_Python.ipynb
@@ -116,7 +116,8 @@
     "code = input(\"Please enter the authoriztion code you generated through the previous instructions, and then press Enter: \")\n",
     "\n",
     "# generate API call for access token\n",
-    "url = f\"https://{baseURL}/SASLogon/oauth/token?grant_type=authorization_code&code={code}\"\n",
+    "url = f\"https://{baseURL}/SASLogon/oauth/token#authorization_code\"\n",
+    "payload = \"grant_type=authorization_code&code=\" + code\n",
     "headers = {\n",
     "'Accept': 'application/json',\n",
     "'Content-Type': 'application/x-www-form-urlencoded',\n",
@@ -124,7 +125,7 @@
     "}\n",
     "\n",
     "# process the results\n",
-    "response = requests.request(\"POST\", url, headers=headers, verify=False)\n",
+    "response = requests.request(\"POST\", url, headers=headers, data=payload, verify=False)\n",
     "access_token = json.loads(response.text)['access_token']\n",
     "print(json.dumps(response.json(), indent=4, sort_keys=True))\n",
     "\n",
@@ -172,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
