adding csv_upload function call to the notebook

--- a/python/text-analytics-scoring/sentiment/text-analytics-sentiment.ipynb
+++ b/python/text-analytics-scoring/sentiment/text-analytics-sentiment.ipynb
@@ -276,7 +276,11 @@
     "# Upload Data\n",
     "unique_id = 123\n",
     "parsedData = str(unique_id)+\",\"+text\n",
-    "print(parsedData)"
+    "print(parsedData)\n",
+    "\n",
+    "# Load CSV\n",
+    "load_data = csv_load(sessionId[\"session\"], oaccess_token, sasserver, parsedData)\n",
+    "print(load_data)"
    ]
   },
   {
