updated Python notebook to correct scopes

--- a/python/authentication/registerClient_generateToken_Python_2023.ipynb
+++ b/python/authentication/registerClient_generateToken_Python_2023.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a48b44ae",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
     "# set/create variables\n",
     "client_id=\"\"\n",
     "client_secret=\"\"\n",
-    "baseURL = \"\" # sasserver.sas.com\n",
+    "baseURL = \"\" # https://sasserver.sas.com\n",
     "admin_user=\"\"\n",
     "admin_password=\"\""
    ]
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "# create API call payload data\n",
-    "payload='{\"client_id\": \"' + client_id +'\",\"client_secret\": \"'+ client_secret +'\",\"scope\": [\"openid\", \"*\"],\"authorized_grant_types\": [\"authorization_code\",\"refresh_token\"],\"redirect_uri\": \"urn:ietf:wg:oauth:2.0:oob\",\"access_token_validity\": \"43199\"}'\n",
+    "payload='{\"client_id\": \"' + client_id +'\",\"client_secret\": \"'+ client_secret +'\",\"scope\": [\"openid\", \"uaa.user\"],\"authorized_grant_types\": [\"authorization_code\",\"refresh_token\"],\"redirect_uri\": \"urn:ietf:wg:oauth:2.0:oob\",\"access_token_validity\": \"43199\"}'\n",
     "\n",
     "# generate API call for register access token\n",
     "url = f\"{baseURL}/SASLogon/oauth/clients\"\n",
