added autoapprove paramerter to client registration

--- a/authentication/scripts/registerClient_generateToken_AuthCode.ipynb
+++ b/authentication/scripts/registerClient_generateToken_AuthCode.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# create API call payload data\n",
-    "payload='{\"client_id\": \"' + client_id +'\",\"client_secret\": \"'+ client_secret +'\",\"scope\": [\"openid\", \"uaa.user\"],\"authorized_grant_types\": [\"authorization_code\",\"refresh_token\"],\"redirect_uri\": \"urn:ietf:wg:oauth:2.0:oob\",\"access_token_validity\": \"42199\"}'\n",
+    "payload='{\"client_id\": \"' + client_id +'\",\"client_secret\": \"'+ client_secret +'\",\"scope\": [\"openid\", \"uaa.user\"],\"authorized_grant_types\": [\"authorization_code\",\"refresh_token\"],\"redirect_uri\": \"urn:ietf:wg:oauth:2.0:oob\",\"access_token_validity\": \"42199\", \"autoapprove\":true}'\n",
     "\n",
     "# generate API call for register access token\n",
     "url = f\"{baseURL}/SASLogon/oauth/clients\"\n",
@@ -273,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
