--- a/authentication/scripts/registerClient_generateToken_AdminUser.ipynb
+++ b/authentication/scripts/registerClient_generateToken_AdminUser.ipynb
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "# create API call payload data\n",
-    "payload='{\"client_id\": \"' + client_id +'\",\"client_secret\": \"'+ client_secret +'\",\"scope\": [\"openid\", \"uaa.user\"],\"authorized_grant_types\": [\"authorization_code\",\"refresh_token\"],\"redirect_uri\": \"urn:ietf:wg:oauth:2.0:oob\",\"access_token_validity\": \"42199, \"autoapprove\":true\"}'\n",
+    "payload='{\"client_id\": \"' + client_id +'\",\"client_secret\": \"'+ client_secret +'\",\"scope\": [\"openid\", \"SASAdministrators\"],\"authorized_grant_types\": [\"authorization_code\",\"refresh_token\"],\"redirect_uri\": \"urn:ietf:wg:oauth:2.0:oob\",\"access_token_validity\": \"42199, \"autoapprove\":true\"}'\n",
     "\n",
     "# generate API call for register access token\n",
     "url = f\"{baseURL}/SASLogon/oauth/clients\"\n",
